# csp-agent-passport

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: langchain_tool_wrapper.py  mcp_middleware.py  multi_agent_chain.py  quickstart.py
src/agent_passport/: __init__.py  _clock.py  _jose.py  _login.py  _scope.py  _storage.py  claims.py  cli.py  errors.py  issuer.py  keys.py  policy.py  verifier.py
src/agent_passport/oidc/: __init__.py  base.py  validator.py
src/nist_agent_passport/: __init__.py  _jose.py  _login.py  _storage.py  claims.py  cli.py  issuer.py  keys.py  verifier.py
src/nist_agent_passport/oidc/: __init__.py  base.py  validator.py
tests/: conftest.py  test_chain_attenuation.py  test_claims.py  test_cli.py  test_examples_smoke.py  test_issuer.py  test_login.py  test_mock_oidc.py  test_oidc_validator.py  test_storage_migration.py  test_verifier.py
tests/fixtures/mock_oidc/: __init__.py  provider.py
