[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nist-agent-passport"
version = "0.0.1"
description = "Verifiable, identity-rooted delegation tokens for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Passport Contributors" }]
keywords = ["oidc", "oauth", "jwt", "rfc8693", "nist", "ai-agents", "delegation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "joserfc>=1.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
nist-agent-passport = "nist_agent_passport.cli:app"

[project.urls]
Homepage = "https://github.com/nist-agent-passport/nist-agent-passport"
Issues = "https://github.com/nist-agent-passport/nist-agent-passport/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nist_agent_passport"]

[tool.hatch.build.targets.wheel.shared-data]
"src/nist_agent_passport/py.typed" = "nist_agent_passport/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
# Make tests/fixtures/mock_oidc importable as `mock_oidc` from any test.
pythonpath = ["tests/fixtures"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Exception names follow CLAUDE.md's spec (e.g. `Expired`, `IALInsufficient`,
# `ScopeViolation`) — semantic, not the conventional `*Error` suffix. The
# names are referenced by callers branching on error type; renaming would
# diverge from the design doc.
"src/nist_agent_passport/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Tests touch private internals (e.g. `Issuer._sign`, mock provider `_key`) for
# adversarial / forgery scenarios; relax `--strict`'s harder rules just for them
# rather than littering individual files with type: ignore comments.
module = "tests.*"
disallow_untyped_decorators = false
warn_return_any = false

